# skarn

./: .gitignore  Cargo.toml  Readme.md
design/: Algorithm.md  IncludeFileFormat.md
src/: arg_parser.rs  compare.rs  config.rs  debug.rs  error.rs  main.rs  matcher.rs  parser.rs  path.rs  pattern.rs  skarn.rs  sync.rs
test/: include.ska
