[package]

name = "skarn"
version = "0.0.1"
authors = ["Michael Sproul <micsproul@gmail.com>"]

[[bin]]

name = "skarn"

[dependencies]
glob = "*"
docopt = "*"
docopt_macros = "*"

[dependencies.typemap]

git = "https://github.com/reem/rust-typemap.git"

[dependencies.phantom]

git = "https://github.com/reem/rust-phantom.git"

[dependencies.sequence_trie]

git = "https://github.com/michaelsproul/rust-sequence-trie.git"
