[package]

name = "skarn"
version = "0.0.1"
authors = ["Michael Sproul <micsproul@gmail.com>"]

[[bin]]

name = "skarn"

[dependencies]
glob = "*"
regex = "*"
regex_macros = "*"
docopt = "*"
docopt_macros = "*"
rustc-serialize = "*"
sequence_trie = "*"

#[dependencies.fern]

#git = "https://github.com/daboross/fern-rs.git"

#[dependencies.fern_macros]

#git = "https://github.com/daboross/fern-macros-rs.git"
